appoinment timeslots reminder comment

--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -92,6 +92,7 @@
                                                 <tr>
                                                     <td>
                                                         <%= appointment.timeslot%>
+                                                        <!--Must be edited to show timeslot attributes instead of the id-->
                                                     </td>
 
                                                     <td>
