added successMessages section

--- a/SRC/views/logs.ejs
+++ b/SRC/views/logs.ejs
@@ -35,7 +35,15 @@
             </nav>
         </header>
     </section>
-    
+    <section>
+        <% if (successMessage && successMessage.length> 0) { %>
+            <div class="alert alert-success">
+                <%= successMessage %>
+            </div>
+            <% } %>
+
+    </section>
+   
 </body>
 
 </html>
