--- a/SRC/views/logs.ejs
+++ b/SRC/views/logs.ejs
@@ -43,7 +43,36 @@
             <% } %>
 
     </section>
-   
+    <!--Body-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-2">
+                <div class="row h-100">
+                    <div class="col-12 menu-container">
+                        <nav class="nav flex-column">
+                            <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set
+                                Appointment</a>
+                            <a class="nav-link" href="/availableTimeslots">View Available Time slots</a>
+                            <a class="nav-link" href="#">Cancel Appointments</a>
+                            <a class="nav-link active" aria-current="page" href="/searchAppointment">Search
+                                Appointment</a>
+                            <a class="nav-link" href="/Settings">Settings</a>
+                            <a class="nav-link" href="/student-cancelled-appointments">Cancelled Appointments</a>
+                            <a class="nav-link" href="/logs">User logs</a>
+
+                        </nav>
+                    </div>
+                </div>
+            </div>
+           
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="../scripts/hideflashmessage.js"></script>
 </body>
 
 </html>
