--- a/SRC/views/logs.ejs
+++ b/SRC/views/logs.ejs
@@ -64,7 +64,12 @@
                     </div>
                 </div>
             </div>
-           
+            <div class="col-12 col-md-10">
+                <section id="dashboard-heading">
+                    <h1>Logs dashboard</h1>
+                </section>
+                
+            </div>
         </div>
     </div>
 
