--- a/SRC/views/logs.ejs
+++ b/SRC/views/logs.ejs
@@ -68,7 +68,14 @@
                 <section id="dashboard-heading">
                     <h1>Logs dashboard</h1>
                 </section>
-                
+                <div class="appointments-box">
+                    <h2>Upcoming Appointments</h2>
+                    <div class="table-responsive">
+                        <table class="table">
+                         
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
