--- a/SRC/views/searchAppointment.ejs
+++ b/SRC/views/searchAppointment.ejs
@@ -25,8 +25,8 @@
                 <div class="individual-appointment">
                   <h4><%= appointment.eventTitle %></h4>
                   <p>Lecturer Name: <%= appointment.lecturerName %></p>
-                  <p>Date: <%= appointment.timeslot.date %></p>
-                  <P>Seats Available: <%= appointment.NumberOfSeats%></P>
+                  <p>Date: <%= appointment.date %></p>
+                  <P>Number of Students joined: <%= (20 - appointment.participantCount) %></P>
                   <a class="join-button" aria-current="page" href="/Join?appointmentId=<%= appointment._id %>">Join</a>
                 </div>
               </div>
@@ -34,6 +34,8 @@
           <% } else { %>
             <p></p>
           <% } %>
+          
+
           </form>
     </div>
 </body>
