--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -52,11 +52,13 @@
                         <nav class="nav flex-column">
                             <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set
                                 Appointment</a>
+                            <a class="nav-link" href="/availableTimeslots">View Available Time slots</a>
                             <a class="nav-link" href="#">Cancel Appointments</a>
                             <a class="nav-link active" aria-current="page" href="/searchAppointment">Search
                                 Appointment</a>
                             <a class="nav-link" href="/Settings">Settings</a>
                             <a class="nav-link" href="/student-cancelled-appointments">Cancelled Appointments</a>
+                            <a class="nav-link" href="/logs">User logs</a>
 
                         </nav>
                     </div>
@@ -89,10 +91,9 @@
                                         <% appointments.forEach(function(appointment) { %>
                                             <%if (appointment.status==='Upcoming' ) { %>
                                                 <tr>
-                                                    <td>                                                       
-                                                        <%= appointment.timeslot.date%>
-                                                        &
-                                                        <%= appointment.timeslot.availabilityTime%>
+                                                    <td>
+                                                        <%= appointment.timeslot%>
+                                                        <!--Must be edited to show timeslot attributes instead of the id-->
                                                     </td>
 
                                                     <td>
@@ -105,12 +106,11 @@
                                                         <%= appointment.status%>
                                                     </td>
                                                     <td><a
-                                                            href="/updateConsultationTimes/<%= appointment.id %>" class="btn btn-secondary" role="button">Edit</a>
+                                                            href="/updateConsultationTimes/<%= appointment.id %>">Modify</a>
                                                     </td>
                                                     <td>
                                                         <% if(appointment.status==="Upcoming" ){ %>
-                                                            <a href="/cancel/<%= appointment.id %>" class="btn btn-danger" role="button">Cancel</a>
-
+                                                            <a href="/cancel/<%= appointment.id %>">Cancel</a>
                                                             <%}%>
                                                     </td>
 
