--- a/SRC/views/timeslots.ejs
+++ b/SRC/views/timeslots.ejs
@@ -32,7 +32,9 @@
 </head>
 
 <body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <section id="header">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -87,7 +89,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <% if(timeslots.length===0){ %>
+                                <% if(timeslots.length === 0){ %>
                                     <td>No timeslots available.</td>
                                     <% }else { %>
                                         <% timeslots.forEach(function(timeslot){ %>
@@ -103,9 +105,8 @@
                                                     <%= timeslot.date%>
                                                 </td>
                                                 <td>
-                                                    <a id="delete"
-                                                        href="/cancel/timeslot/<%= timeslot.id %>"
-                                                        class="btn btn-danger" role="button">delete</a>
+                                                    <a class="modify-timeslot" id="delete" 
+                                                    href="/cancel/timeslot/<%= timeslot.id %>">delete</a>
                                                 </td>
                                             </tr>
                                             <%}); %>
@@ -120,9 +121,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
