--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -116,7 +116,7 @@
                                             <tr>
 
                                                 <td>
-                                                    <%= appointment.date %>
+                                                    <%= appointment.timeslot %>
                                                 </td>
                                                 <td>
                                                     <%= appointment.eventTitle %>
