--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -105,11 +105,12 @@
                                                         <%= appointment.status%>
                                                     </td>
                                                     <td><a
-                                                            href="/updateConsultationTimes/<%= appointment.id %>">Modify</a>
+                                                            href="/updateConsultationTimes/<%= appointment.id %>" class="btn btn-secondary" role="button">Edit</a>
                                                     </td>
                                                     <td>
                                                         <% if(appointment.status==="Upcoming" ){ %>
-                                                            <a href="/cancel/<%= appointment.id %>">Cancel</a>
+                                                            <a href="/cancel/<%= appointment.id %>" class="btn btn-danger" role="button">Cancel</a>
+
                                                             <%}%>
                                                     </td>
 
