lecturer can see date and time of the meeting

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -115,9 +115,12 @@
 
                                             <tr>
 
-                                                <td>
-                                                    <%= appointment.timeslot%>
-                                                </td>
+                                                <td>                                                       
+                                                        <%= appointment.timeslot.date%>
+                                                        &
+                                                        <%= appointment.timeslot.availabilityTime%>                                                   
+                                        
+                                                    </td>
                                                 <td>
                                                     
                                                     <%= appointment.eventTitle %>
