timeslots display for cancelled appointments

--- a/SRC/views/lecturerCancelledAppointments.ejs
+++ b/SRC/views/lecturerCancelledAppointments.ejs
@@ -100,9 +100,11 @@
                                             <%if (appointment.status === 'Cancelled') { %>
 
                                             <tr>
-
-                                                <td>
-                                                    <%= appointment.date %>
+                                                <td>                                                       
+                                                    <%= appointment.timeslot.date%>
+                                                    &
+                                                    <%= appointment.timeslot.availabilityTime%>                                                   
+                                    
                                                 </td>
                                                 <td>
                                                     <%= appointment.eventTitle %>
