--- a/SRC/views/timeslots.ejs
+++ b/SRC/views/timeslots.ejs
@@ -32,9 +32,7 @@
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+
     <section id="header">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -89,7 +87,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <% if(timeslots.length === 0){ %>
+                                <% if(timeslots.length===0){ %>
                                     <td>No timeslots available.</td>
                                     <% }else { %>
                                         <% timeslots.forEach(function(timeslot){ %>
@@ -105,8 +103,9 @@
                                                     <%= timeslot.date%>
                                                 </td>
                                                 <td>
-                                                    <a class="modify-timeslot" id="delete" 
-                                                    href="/cancel/timeslot/<%= timeslot.id %>">delete</a>
+                                                    <a id="delete"
+                                                        href="/cancel/timeslot/<%= timeslot.id %>"
+                                                        class="btn btn-danger" role="button">delete</a>
                                                 </td>
                                             </tr>
                                             <%}); %>
@@ -121,6 +120,9 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
