fix start and end time styling

--- a/SRC/views/availableTimeslots.ejs
+++ b/SRC/views/availableTimeslots.ejs
@@ -73,7 +73,7 @@
                                         <% timeslots.forEach(function(timeslot){ %>
                                             <tr>
                                                 <td>
-                                                    <%= timeslot.availabilityTime %>
+                                                    <%= timeslot.startTime %>-<%= timeslot.endTime %>
                                                 </td>
                                                 <td>
                                                     <%= timeslot.numberOfStudents %>
