--- a/SRC/views/timeslot.ejs
+++ b/SRC/views/timeslot.ejs
@@ -22,9 +22,9 @@
         <form id="scheduleAppointmentForm" action="/createTimeslot" method="post">
             <div class="mb-3">
         
-                <label class="form-label">Availability time<br>
-                    <input name="startTime" id="startTime" type="time" class="form-control" required> to
-                    <input name="endTime" id="endTime" type="time" class="form-control" required>
+                <label class="form-label">Availability time<br><br>
+                    <input name="startTime" id="startTime" type="time" class="form-control-sm" required> to
+                    <input name="endTime" id="endTime" type="time" class="form-control-sm" required>
                 </label><br>
                 <p class="form-errors" id="eventTitleError"></p>
     
