--- a/SRC/views/timeslots.ejs
+++ b/SRC/views/timeslots.ejs
@@ -96,7 +96,7 @@
                                             <tr>
 
                                                 <td>
-                                                    <%= timeslot.availabilityTime %>
+                                                    <%= timeslot.startTime %>-<%= timeslot.endTime %>
                                                 </td>
                                                 <td>
                                                     <%= timeslot.numberOfStudents %>
