adding back date

--- a/SRC/views/searchAppointment.ejs
+++ b/SRC/views/searchAppointment.ejs
@@ -26,7 +26,7 @@
                 <div class="individual-appointment">
                   <h4><%= appointment.eventTitle %></h4>
                   <p>Lecturer Name: <%= appointment.lecturerName %></p>
-                  <p>Date: <%= appointment.timeslot %></p>
+                  <p>Date: <%= appointment.timeslot.date %></p>
                   <P>Seats Available: <%= appointment.NumberOfSeats%></P>
                   <a class="join-button" aria-current="page" href="/Join?appointmentId=<%= appointment._id %>">Join</a>
                 </div>
