code refactored restored 3

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -71,15 +71,11 @@
                     <div class="col-12 menu-container">
                         <nav class="nav flex-column">
                             <a class="nav-link" href="/createTimeslot">Set Availability times</a>
-
                             <a class="nav-link" id="Edit" href="\includeAnotherLecturer">Include another lecturer</a>
-
                             <a class="nav-link" id="Edit" href="/update">Edit Consultation</a>
                             <a class="nav-link" href="/Settings">Settings</a>
-
                             <a class="nav-link" href="/timeslots">View Timeslots</a>
-                           
-
+                            <a class="nav-link" href="/lecturer-cancelled-appointments">Cancelled Appointments</a>
                         </nav>
                     </div>
                 </div>
