Join Existing appointment

--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -53,7 +53,7 @@
                             <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set
                                 Appointment</a>
                             <a class="nav-link" href="#">Cancel Appointments</a>
-                            <a class="nav-link active" aria-current="page" href="/searchAppointment">Search
+                            <a class="nav-link active" aria-current="page" href="/searchAppointment">Join Existing
                                 Appointment</a>
                             <a class="nav-link" href="/Settings">Settings</a>
                             <a class="nav-link" href="/student-cancelled-appointments">Cancelled Appointments</a>
