--- a/SRC/views/Login.ejs
+++ b/SRC/views/Login.ejs
@@ -25,7 +25,7 @@
             <!------------------------- Left Box-------------------->
             <div class='col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box'>
                 <div class="featured-image mb-3">
-                    <img src="/images/calander_image.jpg" class="img-fluid" style="width: 300px;">
+                    <img src="images/LOGO.png" class="img-fluid" style="width: 300px;">
                 </div>
             </div>
 
@@ -44,9 +44,10 @@
                                 placeholder="Password" id="password">
                             <i id="togglePassword" class="fa fa-eye password-icon"></i>
                         </div>
+                        <br>
 
                         <div class="input-group mb-5">
-                            <input type="submit" name="loginButton" id="loginButton" value="Login">
+                            <input type="submit" name="loginButton" id="loginButton" value="Login" style="background-color: blue; color: white; border: none; padding: 10px 20px;">
                         </div>
                     </form>
 
