--- a/SRC/views/signup.ejs
+++ b/SRC/views/signup.ejs
@@ -23,7 +23,7 @@
             <!------------------------- Left Box-------------------->
             <div class='col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box'>
                 <div class="featured-image mb-3">
-                    <img src="images/calander_image.jpg" class="img-fluid" style="width: 400px;">
+                    <img src="images/LOGO.png" class="img-fluid" style="width: 400px;">
                 </div>
             </div>
 
@@ -43,10 +43,10 @@
                         <div class="input-group mb-3">
                             <input name="email" class="form-control" placeholder="Email" type="email" id="email-field"
                                 oninput="validateEmailWrapper(event)" />
-                            <div id="email-error"></div>
-                            <div class="input-group mb-3">
+                            <div id="email-error" class="input-group mb-3">
                                 <span id="email-error"></span>
-                            </div>
+                            </div></div>
+                
                         <div class="input-group mb-3">
                             <select name="role" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
                                 <option selected>Select your role</option>
@@ -68,7 +68,7 @@
                                         </div>
                                     </ul>
                                 </div>
-                            </div>
+                        
 
 
                             <div class="password-wrapper">
@@ -77,7 +77,6 @@
                                     oninput="confirmPasswordWrapper(event)" />
                                     <i id="togglePassword-confirm" class="fa fa-eye password-icon"></i>
                             </div>
-
                                 <div class="password_requirements">
                                     <ul>
                                         <div class="input-group mb-3">
@@ -85,10 +84,13 @@
                                         </div>
                                     </ul>
                                 </div>
+
                             </div>
+
+
                             <div class="button-group" style="display: flex; justify-content: center;">
                                 <div class="input-group mb-5" style="margin-right: 10px;">
-                                    <input type="submit" name="SignUpButton" id="SignUpButton" value="Sign Up">
+                                    <input type="submit" name="SignUpButton" id="SignUpButton" value="Sign Up" style="background-color: blue; color: white; border: none; padding: 10px 20px;">
                                 </div>
                             </div>
                     </form>
@@ -98,7 +100,7 @@
 
 
                 </div>
-                <a class="linkText" href="signin">Already have an account? Login.</a>
+                <a class="linkText" href="signin" >Already have an account? Login.</a>
 
             </div>
         </div>
