--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -114,9 +114,9 @@
                                             <%if (appointment.status === 'Upcoming') { %>
 
                                             <tr>
-
                                                 <td>
-                                                    <%= appointment.timeslot %>
+                                                    <!-- Need to fix -->
+                                                    <%= appointment.timeslot%>
                                                 </td>
                                                 <td>
                                                     <%= appointment.eventTitle %>
