--- a/SRC/views/update.ejs
+++ b/SRC/views/update.ejs
@@ -14,31 +14,33 @@
     <header>
         <h1>Edit your Appointment</h1>
     </header>
-    <div class="container">
-        <p>Event title</p>
-    </div>
-    <!--------------Placeholder-------------------->
-    <div class="container">
-        <p>Assign Different Lecturer/TA(Optional)</p>
-    </div>
 
     <div class="container">
         <p>Update Times</p>
-        <form action="/updateConsultationTimes" method="post">
-            <label class="form-label">Date
-                <input name="update_date" type="datetime-local" class="form-control" id="date" required>
+        <form action="/updateAppointmentTimeslot" method="post">
+            <label class="form-label">New Timeslot
+                <input name="availabilityTime" type="text" class="form-control" >
             </label><br>
-            <input type="hidden" name="appointment_id" value="<%= appointment.id %>"> <!-- hidden field -->
-            <p class="form-errors" id="dateError"></p>
+            <label class="form-label">Date
+                <input name="date" type="text" class="form-control" >
+            </label><br>
+            <label class="form-label">Number of Students
+                <input name="numberOfStudents" type="text" class="form-control" >
+            </label><br>
+                <input type="hidden" name="appointment_id" value="<%= appointment.id %>" type="text" class="form-control">
             <input type="submit" value="Submit">
         </form>
+        
       </div>
     <div class="container">
         <p>Cancel Consultation</p>
+    </td>
+    <td>
+     <% if(appointment.status==="Upcoming" ){ %>
+    <a href="/cancel/<%= appointment.id %>" class="btn btn-danger" role="button">Cancel</a>
+
+    <%}%>
+     </td>
      </div>  
-     <footer class="footer">
-        <button class="btn cancel">Cancel</button>
-        <button class="btn save">Save</button>
-    </footer>    
 </body>
 </html>
